@@ -44,7 +44,7 @@
       about a compile error in a particular configuration, try setting up a build to 
       make sure that it doesn't show up again if it has been fixed.
       <li>
-        Keep an eye on the <a href="http://deuce.doc.wustl.edu/bugzilla/index.cgi">bugzilla
+        Keep an eye on the <a href="http://bugzilla.dre.vanderbilt.edu/">bugzilla
         </a>
       entries that are registered by users and developers. Decide on the bugs that 
       need to be fixed for the beta and pain developers for an ETA.
@@ -420,21 +420,18 @@
       (/project/beguine/ftp/pub/ACE+TAO-distribution and 
       /project/beguine/ftp/pub/ACE+TAO-distribution/diffs) have the right 
       permissions, so that the release script can copy the tar balls.<br>
-      9. When making a release, make sure that all the auto_compiles on that machine 
-      (deuce.doc.wustl.edu) are stopped. Also make sure that there is enough space in 
-      /tmp on that machine.<br>
-      10. When all hell breaks loose, don't wait for the nightly builds to monitor 
+      9. When all hell breaks loose, don't wait for the nightly builds to monitor 
       improvement. Instead manually start the builds.<br>
-      11. Maintain private up-to-date workspaces for problem platforms (read as 
+      10. Maintain private up-to-date workspaces for problem platforms (read as 
       Solaris).<br>
-      12. Don't hesitate to ask for help.<br>
-      13. When you get an account to access the svn repo, make sure you are added to 
+      11. Don't hesitate to ask for help.<br>
+      12. When you get an account to access the svn repo, make sure you are added to 
       the correct groups, for example, 
       gid=100(users),5000(doc),5002(acetaodev),5003(cvs). Otherwise you will have 
       problem to checkout various modules.<br>
-      14. Install your public key to the different machines you have frequent access 
+      13. Install your public key to the different machines you have frequent access 
       to avoid typing password.<br>
-      15. Update this page if you have any more tips for future build czars :-). This 
+      14. Update this page if you have any more tips for future build czars :-). This 
       page is in svn under <code>ACE_wrappres/docs/bczar/bczar.html</code><br>
     </p>
     <hr>
